--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
+    "preview": "vite build && vite preview",
     "test": "jest --watchAll"
   },
   "dependencies": {
@@ -27,6 +27,7 @@
     "@types/jest": "^29.2.5",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@vitejs/plugin-legacy": "^4.1.1",
     "@vitejs/plugin-react": "^4.0.3",
     "babel-jest": "^29.3.1",
     "jest": "^29.3.1",
