--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-jest": "^29.3.1",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "terser": "^5.19.2",
     "vite": "^4.4.4",
     "vite-plugin-static-copy": "^0.17.0",
     "whatwg-fetch": "^3.6.2"
